Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-02-07 Kimmo
 PATCH: [ 1652696 ] Add more options for backup files
  Src: FileActionScript.cpp MainFrm.cpp MainFrm.h Merge.dsp Merge.rc MergeDoc.cpp
   OptionsDef.h OptionsInit.cpp PropGeneral.cpp PropGeneral.h resource.h
  Src new files: PropBackups.cpp PropBackups.h
  Src/Common: PreferencesDlg.cpp PreferencesDlg.h
  Src/Languages/*: Merge*.rc

2007-02-03 Kimmo
 Remove unused enum definition
  Src: PropCompare.h
 Fix Doxygen comments
  Src: PropCompare.h
 Fix Doxygen comment
  Src: PropCompare.cpp

2007-02-01 Kimmo
 Remove unused parameter from CMainFrame::SyncFileToVCS()
  Src: FileActionScript.cpp MainFrm.cpp MainFrm.h

2007-02-01 WinMerge experimental release 2.7.1.6 (SVN revision 4094)

2007-02-01 Kimmo
 PATCH: [ 1636314 ] Fix limiting to single file compare window (2)
  Fix from Takashi
  Src: MainFrm.cpp
 PATCH: [ 1639493 ] Updated Bulgarian language files
  Submitted by tigertron
  Src/Languages/Bulgarian: MergeBulgarian.rc
  Docs/Users/Languages: Readme-Bulgarian.txt
 PATCH: [ 1650043 ] Convert CDiffWrapper to use CompareOptions
  Src: CompareOptions.cpp CompareOptions.h DiffWrapper.cpp DiffWrapper.h
 Remove commented out include line
  Src: DirScan.cpp

2007-01-31 Kimmo
 PATCH: [ 1648182 ] Separate Compare options from DiffWrapper
  Src: CompareOptions.h DiffWrapper.h DirDoc.cpp DirDoc.h Merge.dsp
  Src new file: CompareOptions.cpp
 PATCH: [ 1646638 ] Catalan translation update
  Submitted by Jordi Vilar
   Src/Languages/Catalan: MergeCatalan.rc

2007-01-28 Jochen
 Merge7z DllBuild 0019 - Unassociate .exe filename extension from NSIS format
  ArchiveSupport/Merge7z: Merge7zCommon.cpp Merge7zCommon.h revision.txt
 Support 7-Zip versions 4.43 & 4.44
  ArchiveSupport/Merge7z new files: Merge7z443.dsp Merge7z444.dsp
  ArchiveSupport/Merge7zInstaller: Files.rc2

2007-01-28 Takashi